crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__I079-once-only-choices-can-link-back-to-self.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/I079-once-only-choices-can-link-back-to-self
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0] === PASS
> "" [Choices: "First choice" (0) -> 0]
> "" [Choices: "Second choice" (0) -> 0]
> "" [Ended]
outcome: Ended
