crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__I080-has-read-on-choice.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/I080-has-read-on-choice
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "visible choice" (0) -> 0]
> "visible choice\n" [Done]
outcome: Done
