crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__I082-choice-diverts-to-done.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/I082-choice-diverts-to-done
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "choice" (0) -> 0]
> "choice" [Done]
outcome: Done
