crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__I086-default-simple-gather.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/I086-default-simple-gather
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "x\n" [Done]
outcome: Done
